[package]
name = "nanobv"
version = "0.1.1"
authors = ["inspier <devdevin541@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/nanobv"
repository = "https://github.com/inspier/nanobv"
description = "Lightweight no_std-compatible const_fn oriented BitVector implementation."
license = "MIT"
keywords = ["bit-vector", "const-fn"]
categories = ["no-std"]
readme = "README.md"

[dev-dependencies]
paste = "1.0.4"
picorand = "0.1.1"
